--- a/OpenCurate/ViewController/Home/CollectionViewCells/DepartmentCollectionViewCell.xib
+++ b/OpenCurate/ViewController/Home/CollectionViewCells/DepartmentCollectionViewCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -27,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <color key="backgroundColor" red="0.0" green="0.18823529411764706" blue="0.28627450980392155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="z4f-Qj-2mG" secondAttribute="trailing" constant="8" id="CXI-kn-2Xd"/>
                             <constraint firstItem="z4f-Qj-2mG" firstAttribute="top" secondItem="ykD-YU-cyB" secondAttribute="top" constant="8" id="Udl-M3-hcf"/>
@@ -56,9 +55,4 @@
             <point key="canvasLocation" x="257.24637681159425" y="90.401785714285708"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
